--- a/HaRepackerLib/Controls/ChangableTextbox.resx
+++ b/HaRepackerLib/Controls/ChangableTextbox.resx
@@ -127,7 +127,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="applyButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>184, 0</value>
+    <value>132, 1</value>
   </data>
   <data name="applyButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 24</value>
@@ -151,7 +151,7 @@
     <value>1</value>
   </data>
   <data name="textBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>89, 4</value>
+    <value>38, 3</value>
   </data>
   <data name="textBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>89, 20</value>
@@ -178,13 +178,13 @@
     <value>0, 6</value>
   </data>
   <data name="label.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 13</value>
+    <value>38, 13</value>
   </data>
   <data name="label.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
   <data name="label.Text" xml:space="preserve">
-    <value>Selected Name:</value>
+    <value>Name:</value>
   </data>
   <data name="&gt;&gt;label.Name" xml:space="preserve">
     <value>label</value>
@@ -205,7 +205,7 @@
     <value>6, 13</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 27</value>
+    <value>183, 27</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ChangableTextbox</value>
