--- a/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
+++ b/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
@@ -134,7 +134,7 @@
   <data name="DataTree.SelectedNodes" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAEAQAAABxTeXN0ZW0uQ29sbGVjdGlvbnMuQXJyYXlMaXN0AwAAAAZfaXRl
-        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAAKgAAAAQAgAAAAAAAAAL
+        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAALAAAAAQAgAAAAAAAAAL
 </value>
   </data>
   <data name="DataTree.Size" type="System.Drawing.Size, System.Drawing">
@@ -171,6 +171,57 @@
   <data name="&gt;&gt;MainSplitContainer.Panel1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="planePosition_comboBox.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Popup</value>
+  </data>
+  <data name="planePosition_comboBox.Items" xml:space="preserve">
+    <value>Center</value>
+  </data>
+  <data name="planePosition_comboBox.Items1" xml:space="preserve">
+    <value>Top</value>
+  </data>
+  <data name="planePosition_comboBox.Items2" xml:space="preserve">
+    <value>Bottom</value>
+  </data>
+  <data name="planePosition_comboBox.Items3" xml:space="preserve">
+    <value>Left</value>
+  </data>
+  <data name="planePosition_comboBox.Items4" xml:space="preserve">
+    <value>Right</value>
+  </data>
+  <data name="planePosition_comboBox.Items5" xml:space="preserve">
+    <value>Top-Left</value>
+  </data>
+  <data name="planePosition_comboBox.Items6" xml:space="preserve">
+    <value>Top-Right</value>
+  </data>
+  <data name="planePosition_comboBox.Items7" xml:space="preserve">
+    <value>Bottom-Left</value>
+  </data>
+  <data name="planePosition_comboBox.Items8" xml:space="preserve">
+    <value>Bottom-Right</value>
+  </data>
+  <data name="planePosition_comboBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>351, 13</value>
+  </data>
+  <data name="planePosition_comboBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>85, 21</value>
+  </data>
+  <data name="planePosition_comboBox.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="&gt;&gt;planePosition_comboBox.Name" xml:space="preserve">
+    <value>planePosition_comboBox</value>
+  </data>
+  <data name="&gt;&gt;planePosition_comboBox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;planePosition_comboBox.Parent" xml:space="preserve">
+    <value>MainSplitContainer.Panel2</value>
+  </data>
+  <data name="&gt;&gt;planePosition_comboBox.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="applyChangesButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
@@ -205,7 +256,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;applyChangesButton.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="cartesianPlane_checkBox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -217,13 +268,13 @@
     <value>333, 83</value>
   </data>
   <data name="cartesianPlane_checkBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 17</value>
+    <value>53, 17</value>
   </data>
   <data name="cartesianPlane_checkBox.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
   </data>
   <data name="cartesianPlane_checkBox.Text" xml:space="preserve">
-    <value>Cartesian Plane</value>
+    <value>Plane</value>
   </data>
   <data name="&gt;&gt;cartesianPlane_checkBox.Name" xml:space="preserve">
     <value>cartesianPlane_checkBox</value>
@@ -235,7 +286,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;cartesianPlane_checkBox.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="nextLoopTime_label.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -244,7 +295,7 @@
     <value>NoControl</value>
   </data>
   <data name="nextLoopTime_label.Location" type="System.Drawing.Point, System.Drawing">
-    <value>288, 71</value>
+    <value>224, 60</value>
   </data>
   <data name="nextLoopTime_label.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 13</value>
@@ -265,7 +316,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;nextLoopTime_label.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="nameBox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -277,7 +328,7 @@
     <value>4, 5, 4, 5</value>
   </data>
   <data name="nameBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>229, 30</value>
+    <value>182, 30</value>
   </data>
   <data name="nameBox.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -292,7 +343,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;nameBox.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="nextLoopTime_comboBox.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -316,7 +367,7 @@
     <value>306, 52</value>
   </data>
   <data name="nextLoopTime_comboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 21</value>
+    <value>65, 21</value>
   </data>
   <data name="nextLoopTime_comboBox.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -331,7 +382,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;nextLoopTime_comboBox.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="textPropBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 8pt</value>
@@ -361,7 +412,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;textPropBox.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="vectorPanel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>None</value>
@@ -397,7 +448,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;vectorPanel.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="selectedNodesImgAnimateButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -433,7 +484,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;selectedNodesImgAnimateButton.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="saveSoundButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -469,7 +520,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;saveSoundButton.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="saveImageButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -505,7 +556,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;saveImageButton.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="changeSoundButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -541,7 +592,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;changeSoundButton.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
   </data>
   <data name="changeImageButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -577,7 +628,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;changeImageButton.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>12</value>
   </data>
   <data name="mp3Player.Location" type="System.Drawing.Point, System.Drawing">
     <value>89, 0</value>
@@ -610,7 +661,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;mp3Player.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>13</value>
   </data>
   <data name="pictureBoxPanel.AutoScroll" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -712,7 +763,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;pictureBoxPanel.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>14</value>
   </data>
   <data name="listView_fieldLimitType.Alignment" type="System.Windows.Forms.ListViewAlignment, System.Windows.Forms">
     <value>Default</value>
@@ -751,7 +802,7 @@
     <value>MainSplitContainer.Panel2</value>
   </data>
   <data name="&gt;&gt;listView_fieldLimitType.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>15</value>
   </data>
   <data name="&gt;&gt;MainSplitContainer.Panel2.Name" xml:space="preserve">
     <value>MainSplitContainer.Panel2</value>
