--- a/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
+++ b/HaRepackerLib/Controls/HaRepackerMainPanels/HaRepackerMainPanel.resx
@@ -134,7 +134,7 @@
   <data name="DataTree.SelectedNodes" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAEAQAAABxTeXN0ZW0uQ29sbGVjdGlvbnMuQXJyYXlMaXN0AwAAAAZfaXRl
-        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAALAAAAAQAgAAAAAAAAAL
+        bXMFX3NpemUIX3ZlcnNpb24FAAAICAkCAAAAAAAAALsAAAAQAgAAAAAAAAAL
 </value>
   </data>
   <data name="DataTree.Size" type="System.Drawing.Size, System.Drawing">
@@ -298,13 +298,13 @@
     <value>224, 60</value>
   </data>
   <data name="nextLoopTime_label.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 13</value>
+    <value>59, 13</value>
   </data>
   <data name="nextLoopTime_label.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
   </data>
   <data name="nextLoopTime_label.Text" xml:space="preserve">
-    <value>Next Loop Time:</value>
+    <value>Next Loop:</value>
   </data>
   <data name="&gt;&gt;nextLoopTime_label.Name" xml:space="preserve">
     <value>nextLoopTime_label</value>
@@ -715,7 +715,7 @@
     <value>NoControl</value>
   </data>
   <data name="canvasPropBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>24, 45</value>
+    <value>33, 45</value>
   </data>
   <data name="canvasPropBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>24, 24</value>
@@ -742,10 +742,10 @@
     <value>2</value>
   </data>
   <data name="pictureBoxPanel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>227, 92</value>
+    <value>209, 92</value>
   </data>
   <data name="pictureBoxPanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>199, 176</value>
+    <value>217, 176</value>
   </data>
   <data name="pictureBoxPanel.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
