Fix NullReferenceException while saving a WZ file with a new WzDirectory added
(Missing wzIv , hash & wzFile)

--- a/HaRepackerLib/Properties/Resources.resx
+++ b/HaRepackerLib/Properties/Resources.resx
@@ -253,4 +253,7 @@
   <data name="MainAdditionalInfo_PortalType" xml:space="preserve">
     <value>Portal Type: {0}</value>
   </data>
+  <data name="MainTreeAddDirError" xml:space="preserve">
+    <value>Couldn't find a parent WzFile to add this WzDirectoryProperty.</value>
+  </data>
 </root>
