--- a/HaRepackerLib/Properties/Resources.zh-CHS.resx
+++ b/HaRepackerLib/Properties/Resources.zh-CHS.resx
@@ -225,4 +225,7 @@
   <data name="MainAdditionalInfo_PortalType" xml:space="preserve">
     <value>门户类型：{0}</value>
   </data>
+  <data name="MainTreeAddDirError" xml:space="preserve">
+    <value>Couldn't find a parent WzFile to add this WzDirectoryProperty.</value>
+  </data>
 </root>
