--- a/HaRepackerLib/Properties/Resources.zh-CHT.resx
+++ b/HaRepackerLib/Properties/Resources.zh-CHT.resx
@@ -216,4 +216,7 @@
   <data name="MainAdditionalInfo_PortalType" xml:space="preserve">
     <value>門戶類型：{0}</value>
   </data>
+  <data name="MainTreeAddDirError" xml:space="preserve">
+    <value>Couldn't find a parent WzFile to add this WzDirectoryProperty.</value>
+  </data>
 </root>
